# synchronized_queue

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: log_consumer.h  log_queue.h  logger.h
src/: log_consumer.cpp  log_queue.cpp  logger.cpp
